--- a/index.css
+++ b/index.css
@@ -21,7 +21,7 @@ body {
     justify-content: space-around;
     width: 70%;
 }
-.home-buttons, .guest-buttons {
+.home-buttons, .away-buttons {
     display: flex;
     justify-content: space-around;
     width: 40%;
